--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,16 @@
 body {
   font-family: "Tiny5", Arial, Helvetica, sans-serif;
 }
+
+h1 {
+  color: #fde514;
+  font-size: 56px;
+  text-align: center;
+}
+
+.container {
+  background-color: #f5011a;
+  width: 100%;
+  min-height: 100vh;
+  padding: 32px 16px;
+}
