--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,20 @@ h1 {
   min-height: 100vh;
   padding: 32px 16px;
 }
+
+.grid-container {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 960px;
+  height: 0;
+  width: 100%;
+  margin: 0 auto;
+  padding-bottom: 100%;
+  background-color: #cccfce;
+}
+
+.box {
+  height: 0;
+  width: calc(100% / 16);
+  padding-bottom: calc(100% / 16);
+}
