--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,13 @@ h1 {
   color: #fde514;
   font-size: 56px;
   text-align: center;
-  margin-bottom: 32px;
 }
 
 .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
   background-color: #f5011a;
   width: 100%;
   min-height: 100vh;
@@ -29,6 +32,5 @@ h1 {
   flex-wrap: wrap;
   max-width: 960px;
   width: 100%;
-  margin: 0 auto;
   background-color: #cccfce;
 }
